--- a/.github/workflows/gh2gc.yml
+++ b/.github/workflows/gh2gc.yml
@@ -8,9 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      github_token: ${{ secrets.GITHUB_TOKEN }}
-      gitcode_token: ${{ secrets.GITCODE_TOKEN }}
-      ssh_key: ${{ secrets.SSH_KEY }}
+      github_token: ${{ secrets.GITHUB_TOKEN_SYNC }}
+      gitcode_token: ${{ secrets.GITCODE_TOKEN_SYNC }}
       git_user: tzw-my
       git_email: tzw@x-cmd.com
     steps:
@@ -18,18 +17,6 @@ jobs:
         uses: x-cmd/action@main
         with:
           code: |
-            x gh --cfg token=${github_token}
-            x gcode --cfg token=${gitcode_token}
-            http_code="$(x curl --suppress-connect-headers -I -L -w "%{http_code}\n"  -s -o /dev/null  "https://github.com/${owner_repo}")"
-            [ "${http_code}" != 404 ] || {
-              x gcode repo create --visibility public ${owner_repo}
-            }
-            git clone git@github.com:${owner_repo}.git
-            cd ${owner_repo}
-            git push git@gitcode.net:${owner_repo}.git
-            git push git@gitcode.net:${owner_repo}.git --tags
-            x gx migrate release gh2gc ${owner_repo}
-
-
-# git push https://oauth2:${github_token}@gitcode.net/${ws_owner_repo}.git
-# git push https://oauth2:${github_token}@gitcode.net/${ws_owner_repo}.git --tags
+            ls
+            . ./src/gh2gc
+            test ${github_token} ${gitcode_token}
