--- a/.github/workflows/gh2gc.yml
+++ b/.github/workflows/gh2gc.yml
@@ -1,8 +1,6 @@
 name: x pkg build
 
 on:
-  push:
-    branches: [ main ]
 
   workflow_dispatch:
 
@@ -19,6 +17,5 @@ jobs:
         uses: x-cmd/action@main
         with:
           code: |
-            ls
             . ./src/gh2gc
-            test_a ${github_token} ${gitcode_token}
+            ___x_cmd_repo_man ${github_token} ${gitcode_token}
